feat(di): field inject